# OmniTarget_MCP-Target2Compound

./: .dockerignore  .gitignore  CONTRIBUTING.md  GETTING_STARTED_TESTING.md  GITHUB_SETUP.md  INSTALLATION.md  INTEGRATION_STATUS.md  LICENSE  MVP_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  STATUS.md  TESTING.md  TEST_SUMMARY.md  conda_env_setup.sh  environment.yml  requirements.txt  test_results.json
configs/: pyrazole_cancer_test.yaml  pyrazole_lung_cancer.yaml  pyrazole_lung_cancer_full.yaml  pyrazole_lung_cancer_real.yaml  pyrazole_lung_cancer_test.yaml  pyrazole_lung_cancer_with_targets.yaml  (+8 more)
orchestrator/: __init__.py  api.py  cli.py  pipeline.py  pipeline_nondocking.py  pyproject.toml  settings.py
orchestrator/adapters/: __init__.py  deepdta_adapter.py  e3fp_adapter.py  geminimol_adapter.py  geminimol_embed.py  ouroboros_adapter.py  ouroboros_jobs.py  ouroboros_qsar.py  pharmacophore.py  pocket_box.py  vina_adapter.py
orchestrator/curation/: biolip.py  ccd.py  sifts.py
orchestrator/io/: chem_io.py  pdbqt.py
orchestrator/mcp_clients/: __init__.py  base.py  chembl.py  chembl_client.py  chembl_enhanced_client.py  chembl_mcp_client.py  kegg.py  pdb.py  proteinatlas.py  reactome.py  string.py  uniprot.py
orchestrator/schemas/: __init__.py  api.py  compounds.py  config.py  pipeline.py  pocket.py  results.py  scoring.py  targets.py
orchestrator/scoring/: __init__.py  evidence.py  fuse.py  fuse_nd.py  normalize.py
orchestrator/tests/: __init__.py  e2e_minimal_real.py  test_adapters.py  test_biolip_filters.py  test_e3fp_adapter.py  test_integration.py  test_mcp_clients.py  test_results_columns.py
orchestrator/utils/: data_processing.py  export.py
orchestrator/visualization/: dashboard.py  molecular.py  networks.py  plots.py  reports.py
(+60 files in other folders)
